tests/ui/traits/new-solver/opaque-hidden-ty-is-rigid-projection.stderr
error[E0308]: mismatched types
  --> $DIR/opaque-hidden-ty-is-rigid-projection.rs:5:5
   |
LL | fn test<T: Iterator>(x: T::Item) -> impl Sized {
   |                                     ----------
   |                                     |
   |                                     the expected opaque type
   |                                     expected `impl Sized` because of return type
LL |     x
   |     ^ types differ
   |
   = note:  expected opaque type `impl Sized`
           found associated type `<T as Iterator>::Item`
help: consider constraining the associated type `<T as Iterator>::Item` to `impl Sized`
   |
LL | fn test<T: Iterator<Item = impl Sized>>(x: T::Item) -> impl Sized {
   |                    +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
