tests/ui/traits/new-solver/opaque-hidden-ty-is-rigid-projection.rs
// known-bug: unknown
// compile-flags: -Ztrait-solver=next

fn test<T: Iterator>(x: T::Item) -> impl Sized {
    x
}

fn main() {}
